<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/header"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/eAGHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/eAGHeader"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/A1cHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/A1cHeader"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/eAGHeader"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eAGHeader" />

    <EditText
        android:id="@+id/edteAG"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/eAGHint"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/eAGHeader"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edtA1c"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/Ac1Hint"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/A1cHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edteAG" />

    <Button
        android:id="@+id/btnCalcA1C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:onClick="a1cOnClick"
        android:text="@string/btnCalcA1C"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtA1c" />

    <Button
        android:id="@+id/btnCalcEAG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:onClick="eAGOnClick"
        android:text="@string/btnCalcEAG"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcA1C" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcEAG" />

    <RadioGroup
        android:layout_width="168dp"
        android:layout_height="96dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtA1c">

        <RadioButton
            android:id="@+id/rdoADAG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radioButtonOnClick"
            android:text="@string/rdoADAG"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rdoDCCT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:onClick="radioButtonOnClick"
            android:text="@string/rdoDCCT"
            android:textSize="12sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>